Added an option, to let the digits move around the scree to prevent burn-in.

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -13,4 +13,6 @@
     <string name="title_keep_screen_on">Bildschirm immer an</string>
     <string name="no">Nein</string>
     <string name="yes">Ja</string>
+    <string name="title_move_clock">Bewege Uhr</string>
+    <string name="title_info">Info</string>
 </resources>
