Add HIDE_ALARM preference
This is useful for non-interactive, "maintenance free" clocks hanging on
the wall.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,6 +63,9 @@
     <string name="ble_off">Set time from system clock</string>
     <string name="ble_on">Set time from BLE beacons</string>
 
+    <string name="key_hide_alarm" translatable="false">de.felixonyu.bigclock.preference.hide_alarm</string>
+    <string name="title_hide_alarm">Hide alarm icon if disabled</string>
+
     <string name="key_info" translatable="false">
         de.felixonyu.bigclcock.preference.info
     </string>
