Make the second row contents configurable
Allow the user to choose: AM/PM + alarm, AM/PM only, date/weekday, or
disabled.  Also, let the user choose 12h or 24h time.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,8 +63,11 @@
     <string name="ble_off">Set time from system clock</string>
     <string name="ble_on">Set time from BLE beacons</string>
 
-    <string name="key_hide_alarm" translatable="false">de.felixonyu.bigclock.preference.hide_alarm</string>
-    <string name="title_hide_alarm">Hide alarm icon if disabled</string>
+    <string name="key_second_row" translatable="false">de.felixonyu.bigclock.preference.second_row</string>
+    <string name="title_second_row">Second row contents</string>
+
+    <string name="key_24h" translatable="false">de.felixonyu.bigclock.preference.24h</string>
+    <string name="title_24h">24-hour time</string>
 
     <string name="key_info" translatable="false">
         de.felixonyu.bigclcock.preference.info
